fixing sizes to fit mobile with overflow:hidden

--- a/src/index.css
+++ b/src/index.css
@@ -109,10 +109,19 @@ footer p {
   body, html {
     overflow: hidden;
   }
+  #nav {
+    height: 50px;
+  }
+  #nav h1 {
+    margin-top: 0rem;
+  }
   #pfp {
     height: 9rem;
     width: 9rem;
-    margin-top: 6rem;
-    margin-bottom: 1.5rem;
+    margin-top: 5rem;
+    margin-bottom: 1rem;
+  }
+  li {
+    margin: 10px;
   }
 }
